--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .input__box {
@@ -27,6 +30,7 @@
 }
 
 .btn {
+    display: block;
     font-size: 14px;
     padding: 5px;
     width: 230px;
@@ -36,6 +40,7 @@
     border-radius: 5px;
     margin-top: 20px;
     cursor: pointer;
+    margin: 0 auto;
 }
 
 .btn:focus {
